# circuitnotion-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
circuitnotion/: __init__.py  client.py
examples/: dht22_example.py  ds18b20_example.py  motion_example.py  notification_example.py  physical_switch_example.py  servo_example.py
