[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "circuitnotion"
version = "1.0.0"
description = "IoT library for Raspberry Pi integration with CircuitNotion"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["iot", "raspberry-pi", "gpio", "sensors", "websocket", "home-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "websockets>=10.0",
]

[project.optional-dependencies]
gpio = ["RPi.GPIO>=0.7.0"]
sensors = ["adafruit-circuitpython-dht", "adafruit-blinka"]
dev = ["pytest>=7.0", "black>=22.0", "flake8>=4.0"]

[project.urls]
Homepage = "https://github.com/yourusername/circuitnotion-py"
Documentation = "https://github.com/yourusername/circuitnotion-py#readme"
Repository = "https://github.com/yourusername/circuitnotion-py"
"Bug Tracker" = "https://github.com/yourusername/circuitnotion-py/issues"

[tool.black]
line-length = 100
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]