[metadata]
name = circuitnotion
version = 1.0.0
description = IoT library for Raspberry Pi integration with CircuitNotion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ntirushwajeanmarc/circuitnotion-py
author = ntirushwa Jean Marc
author_email = ntirushwajeanmarc@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: System :: Hardware
    Topic :: Home Automation
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.7
install_requires =
    websockets>=10.0

[options.extras_require]
gpio = RPi.GPIO>=0.7.0
sensors = 
    adafruit-circuitpython-dht
    adafruit-blinka
dev = 
    pytest>=7.0
    black>=22.0
    flake8>=4.0